src/main/java/com/example/fas/repositories/services/serviceImpl/exceptions/user/invalid/BalanceInvalidException.java
package com.example.fas.repositories.services.serviceImpl.exceptions.user.invalid;

public class BalanceInvalidException extends RuntimeException {
    public BalanceInvalidException(String message) {
        super(message);
    }
}
